[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsra-pmlo"
version = "1.0.0"
description = "Dual-Slope Reconstruction Algorithm for Sensor Data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" } 

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[project.urls]
Homepage = "https://github.com/Hatemgab/DSRA-PMLO"

[project.scripts]
dsra-use-case = "dsra_pmlo.use_case:main"

[tool.setuptools.packages.find]
where = ["src"]
